# celeste-staff-meal

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SUPABASE_SETUP.md  app.py  pyproject.toml  requirements.txt
docs/: architecture.md  dashboard-guide.md  use-cases.md
scripts/: delete_mock_data.py  generate_mock_data.py
src/staff_meal/: __init__.py  database.py  models.py  order_storage.py  qr.py  storage.py
supabase/.temp/: pooler-url  postgres-version  project-ref
supabase/migrations/: 20251113195955_create_validation_records_table.sql  20251113200723_create_orders_table.sql
tests/unit_tests/: test_dashboard.py  test_database.py  test_explanation.py  test_models.py  test_order_storage.py  test_prediction.py  test_qr.py  test_services.py  test_storage.py  test_validation.py
ui/: main.py
ui/components/: __init__.py  ai_config.py  bag_input.py  dashboard.py  input.py  order_comparison.py  order_list.py  order_validator.py  output.py  qr_generator.py  qr_input.py  validation_result.py
ui/services/: __init__.py  alerts.py  client_config.py  explanation.py  prediction.py  statistics.py  validation.py
ui/utils/: __init__.py  audio.py  image.py
